# Mejorar-Internet-C-

./: .gitignore  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: ci.yml
build_output/: build-wrapper-dump.json  compile_commands.json
src/: Integradora.cpp
test/: test_main.cpp
